--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup Java 8
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin' # 'temurin' é o padrão atual (antigo AdoptOpenJDK)
+          distribution: 'zulu' # 'temurin' é o padrão atual (antigo AdoptOpenJDK)
           java-version: '8'
       # --------------------------
 
